--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,25 @@ Upgrade instructions
 3. Follow the installation instructions from the README to install the
    newest version of the SDK
 
-Changles from 1.3.5 to 1.3.6
+Changes from 1.3.10 to 1.3.11
+- Fix 404s on page transitions during authentication on iOS
+- Upgrade project files for use with XCode 5.1
+
+Changes from 1.3.9 to 1.3.10
+- Stricter validation of server certificates on HTTP requests
+- Fix an issue in DBRoulette sample when switching between users
+
+Changes from 1.3.8 to 1.3.9
+- You will *not* believe the 64 bit support in this version
+
+Changes from 1.3.7 to 1.3.8
+- Correctly fix the iOS7 background operation bug for users who have already linked Dropbox
+
+Changes from 1.3.6 to 1.3.7
+- Better 64 bit support for iOS
+- Fix a bug when using iOS7's background operation while a passcode is set
+
+Changes from 1.3.5 to 1.3.6
 - Optimized the SDK for iOS7
 
 Changes from 1.3.4 to 1.3.5
